--- a/static/staticbox-style.css
+++ b/static/staticbox-style.css
@@ -45,13 +45,17 @@ body {
 }
 
 #header #rightside #links li a {
-	color: #fff;
+	color: #ccc;
 	text-decoration: none;
 }
 
 #header #rightside #links li a:hover {
 	color: #fff;
 	text-decoration: underline;
+}
+
+#header #rightside #links .selected a {
+	color: #fff;
 }
 
 #wrapper {
